# portfolio

./: .env.example  .gitignore
.github/workflows/: ci.yml  p2-ci.yml
cluster/: README.md  ansible.cfg
cluster/inventory/: hosts.ini
p1-pcam-deployment/: PROGRESS.md  pyproject.toml  requirements.txt
p1-pcam-deployment/docs/: deployment-troubleshooting.md  q5-ml-deploy.md  q7-docker-helm-k8s.md  q9-k8s-ai-reflection.md  security-compliance.md
p1-pcam-deployment/helm/pcam-inference/: Chart.yaml  values.yaml
p1-pcam-deployment/helm/pcam-inference/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
p1-pcam-deployment/k8s/: argocd-application.yaml  rbac.yaml  sealed-secret-ghcr-pull.yaml  sealed-secret-rgw.yaml
p1-pcam-deployment/load-test/: locustfile.py
p1-pcam-deployment/monitoring/: grafana-dashboard.yaml  prometheus-values.yaml  service-monitor.yaml
p1-pcam-deployment/serving/: Dockerfile  build.sh  main.py  requirements.txt
p1-pcam-deployment/tests/: test_inference.py
p1-pcam-deployment/train/: kaggle_train.ipynb  push_artifacts.py  push_kaggle_artifacts.py  submit_dardel.sh  train.py
p2-metadata-ingestion/: .env.example  Dockerfile  PROGRESS.md  README.md  SPEC.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
p3-spark-benchmark/: PROGRESS.md  SPEC.md
p4-nlp-deployment/: PROGRESS.md  SPEC.md
p5-devpractices-site/: PROGRESS.md  SPEC.md
p6-research-agent/: PROGRESS.md  SPEC.md
runbooks/: common-issues.md  known-issues.md  secret-management.md
(+41 files in other folders)
